# monopoly

./: README.md  pyproject.toml
.github/workflows/: ci.yml
monopoly/: behaviour.py  board.py  game.py  location.py  player.py
tests/: test_behaviour.py  test_location.py  test_player.py
