[tool.poetry]
name = "monopoly"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.19.0"
ipdb = "^0.13.4"
isort = "^5.6.4"
black = "^20.8b1"
coverage = "^5.3"
xenon = "^0.7.1"
pytest-cov = "^2.10.1"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
